[gd_scene load_steps=6 format=3 uid="uid://btvkjp2iqyp5q"]

[ext_resource type="Script" uid="uid://c4qg4u0yq7q2w" path="res://options_menu.gd" id="1_lbr8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1lix"]
bg_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4gmlt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.737255, 0.258824, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 9
shadow_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogda5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.737255, 0.258824, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 9
shadow_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bffs"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 3
border_color = Color(0, 0.737255, 0.258824, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 9
shadow_color = Color(0, 0, 0, 0.8)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbr8e")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t1lix")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -41.5
offset_right = 179.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 18
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_4gmlt")
theme_override_styles/hover = SubResource("StyleBoxFlat_ogda5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gmlt")
theme_override_styles/normal = SubResource("StyleBoxFlat_6bffs")
text = "Exit"

[connection signal="value_changed" from="VBoxContainer/VolumeSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
